--- a/people.html
+++ b/people.html
@@ -57,7 +57,7 @@
                 <h2>Wei-Chiao Huang, Postdoctoral researcher</h2>
                 <p class="email">weichiao@buffalo.edu</p>
                 <p>
-                Wei-Chiao is a postdoctoral scholar who completed her PhD at UB BME for the studies of liposomal vaccines. She holds her MS degree at Tsing Hua University in Taiwan.                
+                Wei-Chiao is a postdoctoral scholar who completed her PhD at UB BME for the studies of liposomal vaccines. She holds her MS degree at Tsing Hua University in Taiwan. Wei-Chiao has two cute cats and she enjoys snowboarding a lot in the winter.                
                 </p>
             </div>
         </section>
@@ -79,7 +79,7 @@
                 <h2>Yiting Song, PhD student</h2>
                 <p class="email">yitingso@buffalo.edu</p>
                 <p>
-                Yiting completed her MS from UB BME and is pursuing a PhD in Biomedical Engineering.
+                Yiting completed her MS at UB and is currently pursuing her PhD degree in Biomedical Engineering and studying neurodegenerative and infectious diseases.
                 </p>
             </div>
         </section>
@@ -90,7 +90,7 @@
                 <h2>Wen-Ling Hsu, PhD student</h2>
                 <p class="email">wenlingh@buffalo.edu</p>
                 <p>
-                Wen-Ling holds a M.S. degree in Biochemistry and Molecular Biology from National Yang-Ming University in Taiwan. She is pursuing her PhD degree in UB and working on vaccine development for tuberculosis and rheumatoid arthritis.
+                Wen-Ling holds a M.S. degree in Biochemistry and Molecular Biology from National Yang-Ming University in Taiwan. She is pursuing her PhD degree in UB and working on vaccine development for tuberculosis and rheumatoid arthritis. In her free time, Wen-Ling loves to play competitive tennis and skiing in the winter.
                 </p>
             </div>
         </section>
@@ -112,7 +112,7 @@
                 <h2>Reuben Saamwan Pul, PhD student</h2>
                 <p class="email">reubenmw@buffalo.edu</p>
                 <p>
-                Reuben completed her MS from UB BME and is pursuing a PhD in Biomedical Engineering.
+                Reuben completed her MS from UB BME and is pursuing a PhD in Biomedical Engineering. He is working on vaccine development strategies for infectious diseases like Malaria, Dengue fever, Lassa fever, rotavirus and many more. Reuben enjoys playing soccer and listening to music in his free time.
                 </p>
             </div>
         </section>
