--- a/publications.html
+++ b/publications.html
@@ -188,8 +188,39 @@
         <a href="https://www.mdpi.com/1422-0067/26/3/1212" class="journal">Fluence Rate-Dependent Kinetics of Light-Triggered Liposomal Doxorubicin Assessed by Quantitative Fluorescence-Based Endoscopic Probe</a>
     </div>
     <div class="publication">
-        <span class="authors">D.J. Rohrbach, K.A. Carter, D. Luo, S. Shao, S. Aygun-Sunar, J.F. Lovell U. Sunar</span> – 
-        <a href="https://www.mdpi.com/1422-0067/26/3/1212" class="journal">Fluence Rate-Dependent Kinetics of Light-Triggered Liposomal Doxorubicin Assessed by Quantitative Fluorescence-Based Endoscopic Probe</a>     
+        <span class="authors">R. Prasad, A. Ghosh, V. Patel, B. Peng, B.B. Mendes, E. Honey Aung Win, L.G. Delogu, J.Y. Wong, K.J. Pischel, J.R. Bellare, A. Bar-Shir, A.S. Thakor, W.J. Parak, Z.M. Bhujwalla, Y.S. Zhang, N. Kommineni, V.M. Rotello, W. Cai, T. Lammers, T.W. Odom, G. Padmanaban, D. Peer, J.F. Lovell, R. Srivastava, R. Langer, J. Conde</span> – 
+        <a href="https://pubs.acs.org/doi/full/10.1021/acsnano.4c13513" class="journal">Voices of Nanomedicine: Blueprint Guidelines for Collaboration in Addressing Global Unmet Medical Needs</a>    
+   </div>
+    <div class="publication">
+        <span class="authors">C. Zhang, N. Zhang, R. Yang, Q. Qiu, J. Huang, J. Liu, S. Li, J.F. Lovell, H. Ren, Y. Zhang</span> – 
+        <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/bmm2.70032" class="journal">Intracellular self-assembled nanoneedles for efficient lysosomal escape and CRISPR/Cas9 mediated gene editing</a>
+    </div>
+    <div class="publication">
+        <span class="authors">N. Kommineni, N. Kaur, GS Sainaga Jyothi Vasakuri, N. Narang, M. Mirazul Islam, P. Basim, M. Woollam, L.K. Vora, M. Agarwal, J.F. Lovell, R.P. Meena</span> – 
+        <a href="https://pubs.rsc.org/en/content/articlehtml/2025/nr/d5nr01714a" class="journal">Harnessing volatile organic compound biomarkers for early cancer detection: molecular to nanotechnology-based approaches</a>
+<!-- 2024 -->
+     <div class="pub-year">
+        <h2>2024</h2>
+  </div>
+    <div class="publication">
+        <span class="authors">H. Ren, Z. Wu, J. Li, N. Zhang, C.Y. Nah, J. Li, J. Zhang, J.F. Lovell, L. Zhang, Y. Zhang</span> – 
+        <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/bmm2.12132" class="journal">A biomimetic, triggered-release micelle formulation of methotrexate and celastrol controls collagen-induced arthritis in mice</a> 
+   </div>
+    <div class="publication">
+        <span class="authors">H. Ren, Z. Wu, J. Li, N. Zhang, C.Y. Nah, J. Li, J. Zhang, J.F. Lovell, L. Zhang, Y. Zhang</span> – 
+        <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/bmm2.12104" class="journal">A biomimetic, triggered-release micelle formulation of methotrexate and celastrol controls collagen-induced arthritis in mice</a>
+    </div>
+    <div class="publication">
+        <span class="authors">M. Yang, J. Zhou, L. Lu, D. Deng, J. Huang, Z. Tang, X. Shi, P.C. Lo, J.F. Lovell, Y. Zheng, H. Jin</span> – 
+        <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/EXP.20230171" class="journal">Tumor cell membrane-based vaccines: A potential boost for cancer immunotherapy</a>
+  </div>
+    <div class="publication">
+        <span class="authors">Y. Song, C.L. Dai, M. Shinohara, Y. C. Tung, S. Zhou, W.C. Huang, A. Seffouh, Y. Luo, M. Willadsen, Y. Jiao, M. Morishima, Y. Saito, S.H. Koh, J. Ortega, C.X. Gong, J.F. Lovell</span> – 
+        <a href="https://www.sciencedirect.com/science/article/pii/S0889159124005518" class="journal">A pentavalent peptide vaccine elicits Aβ and tau antibodies with prophylactic activity in an Alzheimer’s disease mouse model</a> 
+         </div>
+    <div class="publication">
+        <span class="authors">J. Huang, B. Yue, J. Sun, T. Xu, J. Zhou, L. Lu, Y. Yan, J.F. Lovell, C. Wan, M. Zhu, H. Jin</span> – 
+        <a href="https://www.sciencedirect.com/science/article/abs/pii/S1748013224003116" class="journal">Injectable thermosensitive hydrogels loaded with irradiated tumor cell-derived microparticles and manganese activate anti-tumor immunity</a>
         <!-- 2021 -->
     <div class="pub-year">
         <h2>2021</h2>
