--- a/publications.html
+++ b/publications.html
@@ -221,6 +221,26 @@
     <div class="publication">
         <span class="authors">J. Huang, B. Yue, J. Sun, T. Xu, J. Zhou, L. Lu, Y. Yan, J.F. Lovell, C. Wan, M. Zhu, H. Jin</span> – 
         <a href="https://www.sciencedirect.com/science/article/abs/pii/S1748013224003116" class="journal">Injectable thermosensitive hydrogels loaded with irradiated tumor cell-derived microparticles and manganese activate anti-tumor immunity</a>
+  </div>
+    <div class="publication">
+        <span class="authors">Y. Sun, Y. Hu, Y. Geng, C. Wan, Y. Liu, Y. Liao, X. Shi, J.F. Lovell, K. Yang, H. Jin</span> – 
+        <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/EXP.20220170" class="journal">A self-assembled, genetically engineered, irradiated tumor cell debris vaccine</a> 
+  </div>
+    <div class="publication">
+        <span class="authors">K. Miura, B. Deng, R. V. Suresh, Y.T. Gebremicale, L. Zhou, T.P. Pham, K. Roche, A. Diouf, J.F. Lovell, J.P. Julien, C.A. Long</span> – 
+        <a href="https://www.nature.com/articles/s41598-024-73843-5" class="journal">A human-serum-free medium can induce more infectious P. falciparum gametocytes than a conventional human-serum-containing medium</a>    
+  </div>
+    <div class="publication">
+        <span class="authors">J.F. Lovell, K. Miura, Y.O. Barik, C. Lee, Y. Choi, H. Her, J.Y. Lee, M. Ylade, R. Lee-Llacer, N. De Asis, M. Trinidad-Aseron, J.M. Ranola, L. Zoleta De Jesus</span> – 
+        <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/jmv.29927" class="journal">Interim safety and immunogenicity analysis of the EuCorVac-19 COVID-19 vaccine in a Phase 3 randomized, observer-blind, immunobridging trial in the Philippines</a> 
+ </div>
+    <div class="publication">
+        <span class="authors">WC Huang, WS Baker, JF Lovell, CH Schein</span> – 
+        <a href="https://www.sciencedirect.com/science/article/pii/S0042682224001739" class="journal">Displaying alphavirus physicochemical consensus antigens on immunogenic liposomes enhances antibody elicitation in mice</a> 
+ </div>
+    <div class="publication">
+        <span class="authors">J. Li, R. Yang, F. Dong, Q. Qiu, Z. Jiang, H. Ren, C. Zhang, G. Liu, J.F. Lovell, Y. Zhang</span> – 
+        <a href="https://pubs.acs.org/doi/full/10.1021/acsnano.3c12375" class="journal">Enzyme-Dynamic Extracellular Vesicles for Metalloimmunotherapy of Malignant Pleural Effusions</a>       
         <!-- 2021 -->
     <div class="pub-year">
         <h2>2021</h2>
