--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 <main>
 
 <section class="hero-slider">
+    <button class="prev-btn" onclick="moveSlide(-1)">&#10094;</button>
+    <button class="next-btn" onclick="moveSlide(1)">&#10095;</button>
+    
     <div class="slider">
         <div class="slide"><img src="data1/images/Picture1.jpg" alt="PoP liposomes"></div>
         <div class="slide"><img src="data1/images/Picture2.jpg" alt="Cobalt Porphyrin Liposomes"></div>
