--- a/people.html
+++ b/people.html
@@ -159,8 +159,8 @@
         <h1>Group Photos</h1>
         <p>
             <section class="hero-slider">
-                <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
-                <button class="next" onclick="moveSlide(1)">&#10095;</button>
+                <button class="slider-btn prev" onclick="moveSlide(-1)">&#10094;</button>
+                <button class="slider-btn next" onclick="moveSlide(1)">&#10095;</button>
                 
                 <div class="slider">
                     <div class="slide"><img src="data1/images/labevent6.jpg" alt="Get Air 1-2025"></div>
