--- a/people.html
+++ b/people.html
@@ -68,7 +68,7 @@
                 <h2>Yuan Luo, PhD student</h2>
                 <p class="email">yuanluo@buffalo.edu</p>
                 <p>
-                Yuan completed her MS from China Pharmaceutical University and is pursuing a PhD in Biomedical Engineering.
+                Yuan completed her MS from China Pharmaceutical University and is pursuing her PhD in Biomedical Engineering. Her studies focus on adjuvant system for liposomal cancer vaccine formulation.
                 </p>
             </div>
         </section>
@@ -101,7 +101,7 @@
                 <h2>Qinzhe Li, PhD student</h2>
                 <p class="email">qinzheli@buffalo.edu</p>
                 <p>
-                Qinzhe Li completed his MS from ?? and is pursuing a PhD in Biomedical Engineering.
+                Qinzhe Li completed his MS from University of Pittsburg in Pharmaceutical Science and is pursuing his PhD in Biomedical Engineering. He's currently working on the development of influenza vaccines.
                 </p>
             </div>
         </section>
@@ -123,7 +123,7 @@
                 <h2>Yang Jiao, PhD student</h2>
                 <p class="email">yjiao2@buffalo.edu</p>
                 <p>
-                Yang completed her MS from UB BME and is pursuing a PhD in Biomedical Engineering.
+                Yang completed her MS from UB BME and is pursuing a PhD in Biomedical Engineering. He works on liposome lyophilization of liposomal vaccines and several vaccines targeting infectious diseases.
                 </p>
             </div>
         </section>
@@ -134,7 +134,7 @@
                 <h2>Yuqi Chen, PhD student</h2>
                 <p class="email">ychen488@buffalo.edu</p>
                 <p>
-                Yuqi completed her MS from ??? University and is pursuing a PhD in Biomedical Engineering.
+                Yuqi completed her MS from Boston University in Bioengineering and Biomedical Engineering. She is pursuing a PhD in Biomedical Engineering and developing therapeutic vaccines for cancers.
                 </p>
             </div>
         </section>
@@ -145,7 +145,7 @@
                 <h2>Jimmy Jablonski, Research technician/scientist</h2>
                 <p class="email">jamesjab@buffalo.edu</p>
                 <p>
-                Jimmy is a UB graduate with MS degree in BME. He is a research technician/scientist in the lab.
+                Jimmy is a UB graduate with MS degree in BME and his previous research focused on therapeutic vaccines for tumors. Currently, he is a research technician/scientist in the lab. He's good at hockey and skiing.
                 </p>
             </div>
         </section>
