--- a/publications.html
+++ b/publications.html
@@ -39,6 +39,14 @@
 <!-- 2026 -->
      <div class="pub-year">
         <h2>2026</h2>
+ </div>
+    <div class="publication">
+        <span class="authors">W.L. Hsu, Y. Jiao, M. Hvasta, K.N. Tran, B.T. Troyer, W.C. Huang, B. Kuhlman, A. Obregon-Henao, J.F. Lovell</span> – 
+        <a href="https://www.sciencedirect.com/science/article/pii/S0264410X26000897" class="journal">A point-mutated Ag85B antigen improves recombinant bacterial expression and protects mice from aerosol M. tuberculosis challenge</a>
+</div>
+    <div class="publication">
+        <span class="authors">Y Luo, S Zhou, S Wu, H Jin, JF Lovell</span> – 
+        <a href="https://www.cell.com/cell-reports-physical-science/fulltext/S2666-3864(26)00002-0" class="journal">Emerging strategies for advancing peptide vaccines</a>
 </div>
     <div class="publication">
         <span class="authors">D. Ivanochko, K. Miura, S. Hailemariam, R. Ravichandran, Y. Song, W.C. Huang, R. Stoter, K. Teelen, G.J Van Gemert, E. M. Leaf, S. Chan, C. Men, A. Semesi, C. Shiu, R.S. MacGill, C.A. Long, M.M. Jore, N. P. King, J. F. Lovell, J.P. Julien</span> – 
@@ -240,7 +248,11 @@
  </div>
     <div class="publication">
         <span class="authors">J. Li, R. Yang, F. Dong, Q. Qiu, Z. Jiang, H. Ren, C. Zhang, G. Liu, J.F. Lovell, Y. Zhang</span> – 
-        <a href="https://pubs.acs.org/doi/full/10.1021/acsnano.3c12375" class="journal">Enzyme-Dynamic Extracellular Vesicles for Metalloimmunotherapy of Malignant Pleural Effusions</a>       
+        <a href="https://pubs.acs.org/doi/full/10.1021/acsnano.3c12375" class="journal">Enzyme-Dynamic Extracellular Vesicles for Metalloimmunotherapy of Malignant Pleural Effusions</a>
+ </div>
+    <div class="publication">
+        <span class="authors">J. Li, R. Yang, F. Dong, Q. Qiu, Z. Jiang, H. Ren, C. Zhang, G. Liu, J.F. Lovell, Y. Zhang</span> – 
+        <a href="https://pubs.acs.org/doi/full/10.1021/acsnano.3c12375" class="journal">Enzyme-Dynamic Extracellular Vesicles for Metalloimmunotherapy of Malignant Pleural Effusions</a>        
         <!-- 2021 -->
     <div class="pub-year">
         <h2>2021</h2>
