--- a/people.html
+++ b/people.html
@@ -191,6 +191,28 @@
             </div>
         </section>
 
+        <h1>Alumni</h1>
+        <section class="person-box">
+            <img src="graphics/members/alyssa_web.jpg" class="profile-img" alt="Alyssa Hoogs">
+            <div class="person-info">
+                <h2>Alyssa Hoogs</h2>
+                <p>
+                Alyssa completed her MS degree in 2025.
+                </p>
+            </div>
+        </section>
+
+        <h1>Alumni</h1>
+        <section class="person-box">
+            <img src="graphics/members/emma_web.jpg" class="profile-img" alt="Emma Bryce">
+            <div class="person-info">
+                <h2>Emma Bryce</h2>
+                <p>
+                Emma completed her MS degree in 2025, and she is working as an Associate Clinical Account Specialist at Biosense Webster currently.
+                </p>
+            </div>
+        </section>
+
         <section class="person-box">
             <img src="graphics/members/zack_web.jpg" class="profile-img" alt="Zacharay Sia">
             <div class="person-info">
