--- a/people.html
+++ b/people.html
@@ -163,13 +163,15 @@
                 <button class="slider-btn next" onclick="moveSlide(1, this)">&#10095;</button>
                 
                 <div class="slider">
-                    <div class="slide"><img src="data1/images/labevent6.jpg" alt="Get Air 1-2025"></div>
-                    <div class="slide"><img src="data1/images/labevent2.jpg" alt="Get Air 2-2025"></div>
-                    <div class="slide"><img src="data1/images/labevent3.jpg" alt="Get Air 2-2025"></div>
-                    <div class="slide"><img src="data1/images/labevent4.jpg" alt="Get Air 2-2025"></div>
-                    <div class="slide"><img src="data1/images/labevent5.jpg" alt="Get Air 2-2025"></div>
-                    <div class="slide"><img src="data1/images/labevent1.jpg" alt="Get Air 2-2025"></div>
-                    <div class="slide"><img src="data1/images/labevent7.jpg" alt="Get Air 2-2025"></div>
+                    <div class="slide"><img src="data1/images/labevent6.jpg" alt="Picnic"></div>
+                    <div class="slide"><img src="data1/images/labevent2.jpg" alt="Get Air"></div>
+                    <div class="slide"><img src="data1/images/labevent3.jpg" alt="Bouldering"></div>
+                    <div class="slide"><img src="data1/images/labevent4.jpg" alt="Ice skating"></div>
+                    <div class="slide"><img src="data1/images/labevent5.jpg" alt="Hot pot"></div>
+                    <div class="slide"><img src="data1/images/labevent1.jpg" alt="Get Air"></div>
+                    <div class="slide"><img src="data1/images/labevent7.jpg" alt="Lasertag"></div>
+                    <div class="slide"><img src="data1/images/labevent8.jpg" alt="Escape room"></div>
+
 
                 </div>
             </section>
