--- a/people.html
+++ b/people.html
@@ -158,7 +158,7 @@
         <!-- GROUP PHOTOS -->
         <h1>Group Photos</h1>
         <p>
-            <section class="hero-slider">
+            <section class="people-slider">
                 <button class="slider-btn prev" onclick="moveSlide(-1, this)">&#10094;</button>
                 <button class="slider-btn next" onclick="moveSlide(1, this)">&#10095;</button>
                 
