--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 <main>
 
 <section class="hero-slider">
-    <button class="slider-btn prev" onclick="moveSlide(-1, this)">&#10094;</button>
-    <button class="slider-btn next" onclick="moveSlide(1, this)">&#10095;</button>
+    <button class="prev-btn" onclick="moveSlide(-1, this)">&#10094;</button>
+    <button class="next-btn" onclick="moveSlide(1, this)">&#10095;</button>
     
     <div class="slider">
         <div class="slide"><img src="data1/images/Picture1.jpg" alt="PoP liposomes"></div>
