--- a/people.html
+++ b/people.html
@@ -158,19 +158,19 @@
         <!-- GROUP PHOTOS -->
         <h1>Group Photos</h1>
         <p>
-            <section class="people-slider">
+            <section class="hero-slider">
                 <button class="prev-btn" onclick="moveSlide(-1, this)">&#10094;</button>
                 <button class="next-btn" onclick="moveSlide(1, this)">&#10095;</button>
                 
-                <div class="p_slider">
-                    <div class="p_slide"><img src="data1/images/labevent6.jpg" alt="Picnic"></div>
-                    <div class="p_slide"><img src="data1/images/labevent2.jpg" alt="Get Air"></div>
-                    <div class="p_slide"><img src="data1/images/labevent3.jpg" alt="Bouldering"></div>
-                    <div class="p_slide"><img src="data1/images/labevent4.jpg" alt="Ice skating"></div>
-                    <div class="p_slide"><img src="data1/images/labevent5.jpg" alt="Hot pot"></div>
-                    <div class="p_slide"><img src="data1/images/labevent1.jpg" alt="Get Air"></div>
-                    <div class="p_slide"><img src="data1/images/labevent7.jpg" alt="Lasertag"></div>
-                    <div class="p_slide"><img src="data1/images/labevent8.jpg" alt="Escape room"></div>
+                <div class="slider">
+                    <div class="slide"><img src="data1/images/labevent6.jpg" alt="Picnic"></div>
+                    <div class="slide"><img src="data1/images/labevent2.jpg" alt="Get Air"></div>
+                    <div class="slide"><img src="data1/images/labevent3.jpg" alt="Bouldering"></div>
+                    <div class="slide"><img src="data1/images/labevent4.jpg" alt="Ice skating"></div>
+                    <div class="slide"><img src="data1/images/labevent5.jpg" alt="Hot pot"></div>
+                    <div class="slide"><img src="data1/images/labevent1.jpg" alt="Get Air"></div>
+                    <div class="slide"><img src="data1/images/labevent7.jpg" alt="Lasertag"></div>
+                    <div class="slide"><img src="data1/images/labevent8.jpg" alt="Escape room"></div>
 
 
                 </div>
