--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         <div class="slide"><img src="data1/images/Picture8.jpg" alt="Nanoparticle degradation"></div>
         <div class="slide"><img src="data1/images/Picture9.jpg" alt="Liposome lypholization"></div>
         <div class="slide"><img src="data1/images/Picture10.jpg" alt="Cancer cell targeting"></div>
+        <div class="slide"><img src="data1/images/Picture11.jpg" alt="TB antigen engineering"></div>
+
     </div>
 </section>
 
