--- a/people.html
+++ b/people.html
@@ -171,6 +171,16 @@
                     <div class="slide"><img src="data1/images/labevent1.jpg" alt="Get Air"></div>
                     <div class="slide"><img src="data1/images/labevent7.jpg" alt="Lasertag"></div>
                     <div class="slide"><img src="data1/images/labevent8.jpg" alt="Escape room"></div>
+                    <div class="slide"><img src="data1/images/labevent9.jpg" alt="Escape room"></div>
+                    <div class="slide"><img src="data1/images/labevent10.jpg" alt="Graduation"></div>
+                    <div class="slide"><img src="data1/images/labevent11.jpg" alt="Corn maze"></div>
+                    <div class="slide"><img src="data1/images/labevent12.jpg" alt="Pumpkin"></div>
+                    <div class="slide"><img src="data1/images/labevent13.jpg" alt="Throwing axe"></div>
+                    <div class="slide"><img src="data1/images/labevent14.jpg" alt="Go cart"></div>
+                    <div class="slide"><img src="data1/images/labevent15.jpg" alt="Museum"></div>
+                    <div class="slide"><img src="data1/images/labevent16.jpg" alt="Tree climbing"></div>
+                    <div class="slide"><img src="data1/images/labevent17.jpg" alt="Tree climbing"></div>
+                    <div class="slide"><img src="data1/images/labevent18.jpg" alt="Picnic"></div>
 
 
                 </div>
