--- a/people.html
+++ b/people.html
@@ -129,6 +129,17 @@
         </section>
 
         <section class="person-box">
+            <img src="graphics/members/matthew_web.jpg" class="profile-img" alt="Matthew Willadsen">
+            <div class="person-info">
+                <h2>Matthew Willadsen, PhD student</h2>
+                <p class="email">mjwillad@buffalo.edu</p>
+                <p>
+                Matthew completed his MS from UB BME and is pursuing his PhD in Biomedical Engineering. He works on liposome formulation and HPLC quantification methodology.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
             <img src="graphics/members/yuqi_web.jpg" class="profile-img" alt="Yuqi Chen">
             <div class="person-info">
                 <h2>Yuqi Chen, PhD student</h2>
