--- a/publications.html
+++ b/publications.html
@@ -70,18 +70,6 @@
         <!-- 2025 -->
      <div class="pub-year">
         <h2>2025</h2>
-    </div>
-    <div class="publication">
-        <span class="authors">T Xu, J Huang, Y Liu, L Lu, JF Lovell, M Zhu, H Jin</span> – 
-        <a href="https://www.nature.com/articles/s41698-025-01260-6" class="journal">A machine learning-defined cellular senescence signature systematically enhances prognostication and guides immunotherapy strategies for the treatment of gliomas</a>
-    </div>
-    <div class="publication">
-        <span class="authors">M Petion, J Lovell, Y Song, S Zhou, MD Hicar</span> – 
-        <a href="https://academic.oup.com/ofid/article/13/Supplement_1/ofaf695.1660/8421701" class="journal">P-1474. Development of an HIV vaccine based on 2C6, an antibody that targets a conformational gp41 epitope with cross-clade recognition and robust antibody dependent cell cytotoxicity </a>
-    </div>
-    <div class="publication">
-        <span class="authors">R Prasad, U Chitgupi, SK Metkar, JF Lovell</span> – 
-        <a href="https://www.sciencedirect.com/science/chapter/edited-volume/abs/pii/B9780443222535000303" class="journal">Chapter 21 - Optotheranostics for cancer</a>
         </div>
     <div class="publication">
         <span class="authors">CL Dai, Y Song, Y Chen, YC Tung, WC Huang, CX Gong, JF Lovell</span> – 
@@ -251,8 +239,37 @@
         <a href="https://pubs.acs.org/doi/full/10.1021/acsnano.3c12375" class="journal">Enzyme-Dynamic Extracellular Vesicles for Metalloimmunotherapy of Malignant Pleural Effusions</a>
  </div>
     <div class="publication">
-        <span class="authors">J. Li, R. Yang, F. Dong, Q. Qiu, Z. Jiang, H. Ren, C. Zhang, G. Liu, J.F. Lovell, Y. Zhang</span> – 
-        <a href="https://pubs.acs.org/doi/full/10.1021/acsnano.3c12375" class="journal">Enzyme-Dynamic Extracellular Vesicles for Metalloimmunotherapy of Malignant Pleural Effusions</a>        
+        <span class="authors">J.S. Kirk, J. Wang, M. Long, S. Rosario, A. Tracz, Y. Ji, R. Kumar, X. Liu, A. Jamroze, P.K. Singh, I. Puzanov, G. Chatta, Q. Cheng, J. Huang, J.L. Wrana, J. F. Lovell, H. Yu, S. Liu, M.M. Shen, T. Liu, D.G. Tang</span> – 
+        <a href="https://www.cell.com/cell-stem-cell/fulltext/S1934-5909(24)00185-1" class="journal">Integrated single-cell analysis defines the epigenetic basis of castration-resistant prostate luminal cells</a>
+</div>
+    <div class="publication">
+        <span class="authors">WC Huang, K Eberle, JR Colon, JF Lovell, H Xin</span> – 
+        <a href="https://journals.asm.org/doi/full/10.1128/msphere.00189-24" class="journal">Liposomal Fba and Met6 peptide vaccination protects mice from disseminated candidiasis</a>
+       </div>
+    <div class="publication">
+        <span class="authors">C. Wang, Y. Geng, H. Wang, Z. Ren, Q. Hou, A. Fang, Q. Wu, L. Wu, X. Shi, M. Zhou, Z.F. Fu, J.F. Lovell, H. Jin, L. Zhao</span> – 
+        <a href="https://link.springer.com/article/10.1038/s44321-024-00076-4" class="journal">A broadly applicable protein-polymer adjuvant system for antiviral vaccines</a> 
+     </div>
+    <div class="publication">
+        <span class="authors">R. Prasad, V. GS Jyothi, N. Kommineni, R. T. Bulusu, B.B. Mendes, J.F. Lovell, J. Conde</span> – 
+        <a href="https://pubs.acs.org/doi/full/10.1021/acs.nanolett.4c01534" class="journal">Biomimetic Ghost Nanomedicine-Based Optotheranostics for Cancer</a> 
+    </div>
+    <div class="publication">
+        <span class="authors">C.K. Lee, J.F. Lovell, Y.H. Whang, W.Y. Hwang, H.J. Kim, M.C. Park, S.K. Kim, W.C. Huang, D.H. Ha</span> – 
+        <a href="https://patents.google.com/patent/US20240148856A1/en" class="journal">Respiratory syncytial virus vaccine</a>   
+     </div>
+    <div class="publication">
+        <span class="authors">Z Deng, B Li, M Yang, L Lu, X Shi, JF Lovell, X Zeng, W Hu, H Jin</span> – 
+        <a href="https://link.springer.com/article/10.1186/s12951-024-02496-3" class="journal">Irradiated microparticles suppress prostate cancer by tumor microenvironment reprogramming and ferroptosis</a> 
+    </div>
+    <div class="publication">
+        <span class="authors">S.S. Wang, S. Shao, A. Singh, R. Hombu, J.F. Lovell, K.L. Matta, S. Neelamegham</span> – 
+        <a href="https://www.sciencedirect.com/science/article/abs/pii/S0008621524000983" class="journal">Photosensitizer-thioglycosides enhance photodynamic therapy by augmenting cellular uptake</a> 
+     </div>
+    <div class="publication">
+        <span class="authors">S Zhou, Y Song, A Nilam, Y Luo, WC Huang, MD Long, JF Lovell</span> – 
+        <a href="https://www.sciencedirect.com/science/article/abs/pii/S0168365924002232" class="journal">The predominant Quillaja Saponaria fraction, QS-18, is safe and effective when formulated in a liposomal murine cancer peptide vaccine</a> 
+                    
         <!-- 2021 -->
     <div class="pub-year">
         <h2>2021</h2>
