--- a/people.html
+++ b/people.html
@@ -123,7 +123,7 @@
                 <h2>Yang Jiao, PhD student</h2>
                 <p class="email">yjiao2@buffalo.edu</p>
                 <p>
-                Yang completed her MS from UB BME and is pursuing a PhD in Biomedical Engineering. He works on liposome lyophilization of liposomal vaccines and several vaccines targeting infectious diseases.
+                Yang is pursuing his PhD in Biomedical Engineering. He works on liposome lyophilization of liposomal vaccines and several vaccines targeting infectious diseases.
                 </p>
             </div>
         </section>
