--- a/publications.html
+++ b/publications.html
@@ -269,7 +269,27 @@
     <div class="publication">
         <span class="authors">S Zhou, Y Song, A Nilam, Y Luo, WC Huang, MD Long, JF Lovell</span> – 
         <a href="https://www.sciencedirect.com/science/article/abs/pii/S0168365924002232" class="journal">The predominant Quillaja Saponaria fraction, QS-18, is safe and effective when formulated in a liposomal murine cancer peptide vaccine</a> 
-                    
+    </div>
+    <div class="publication">
+        <span class="authors">A. Koornneef, K. Vanshylla, G. Hardenberg, L. Rutten, N.M. Strokappe, J. Tolboom, J. Vreugdenhil, K. Feddes-de Boer, A. Perkasa, S. Blokland, J.A. Burger, W.C. Huang, J.F. Lovell, D. van Manen, R.W. Sanders, R.C. Zahn, H. Schuitemaker, J.PM. Langedijk, F. Wegmann</span> – 
+        <a href="https://www.nature.com/articles/s41467-024-47492-1" class="journal">CoPoP liposomes displaying stabilized clade C HIV-1 Env elicit tier 2 multiclade neutralization in rabbits</a> 
+   </div>
+    <div class="publication">
+        <span class="authors">S Zhou, Y Song, Y Luo, B Quinn, Y Jiao, MD Long, SI Abrams, JF Lovell</span> – 
+        <a href="https://aacrjournals.org/cancerrescommun/article/4/4/958/742832" class="journal">Identification of Enhanced Vaccine Mimotopes for the p15E Murine Cancer Antigen</a> 
+</div>
+    <div class="publication">
+        <span class="authors">J. Li, Q. Qiu, H. Ren, J. Zhang, C. Zhang, G. Liu, B. Sun, B. Zheng, J.F. Lovell, Y. Zhang</span> – 
+        <a href="https://www.sciencedirect.com/science/article/abs/pii/S1748013224000100" class="journal">A metalloprotein nanoparticle scaffold co-delivers antigens and adjuvants with metal-enhanced STING activation for vaccination preventing viral infections</a> 
+  </div>
+    <div class="publication">
+        <span class="authors">J Lovell, HE Xuedan, S Zhou</span> – 
+        <a href="https://patents.google.com/patent/US20240091328A1/en" class="journal">Formulations and methods for mhc-i restricted epitope immunization</a> 
+  </div>
+    <div class="publication">
+        <span class="authors">J Lovell, HE Xuedan, S Zhou</span> – 
+        <a href="https://patents.google.com/patent/US20240091328A1/en" class="journal">Formulations and methods for mhc-i restricted epitope immunization</a> 
+                                               
         <!-- 2021 -->
     <div class="pub-year">
         <h2>2021</h2>
