--- a/publications.html
+++ b/publications.html
@@ -287,9 +287,25 @@
         <a href="https://patents.google.com/patent/US20240091328A1/en" class="journal">Formulations and methods for mhc-i restricted epitope immunization</a> 
   </div>
     <div class="publication">
-        <span class="authors">J Lovell, HE Xuedan, S Zhou</span> – 
-        <a href="https://patents.google.com/patent/US20240091328A1/en" class="journal">Formulations and methods for mhc-i restricted epitope immunization</a> 
-                                               
+        <span class="authors">Z.R. Sia, J. Roy, W.C. Huang, Y. Song, S. Zhou, Y. Luo, Q. Li, D. Arpin, H.L. Kutscher, J. Ortega, B.A. Davidson, J.F. Lovell</span> – 
+        <a href="https://www.cell.com/cell-reports-medicine/fulltext/S2666-3791%2824%2900056-9?trk=public_post_comment-text" class="journal">Adjuvanted nanoliposomes displaying six hemagglutinins and neuraminidases as an influenza virus vaccine</a> 
+   </div>
+    <div class="publication">
+        <span class="authors">H Ren, J Li, JF Lovell, Y Zhang</span> – 
+        <a href="https://www.sciencedirect.com/science/article/abs/pii/S0010854523006239" class="journal">Applications of Intravital Imaging in Cancer Immunotherapy</a> 
+ </div>
+    <div class="publication">
+        <span class="authors">D Deng, T Hao, L Lu, M Yang, Z Zeng, JF Lovell, Y Liu, H Jin</span> – 
+        <a href="https://www.mdpi.com/2306-5354/11/3/264" class="journal">Organic coordination nanoparticles for phototheranostics</a> 
+ </div>
+    <div class="publication">
+        <span class="authors">R. Prasad, B. Peng, B.B. Mendes, H.I. Kilian, M. Gorain, H. Zhang, G.C. Kundu, J. Xia, J.F. Lovell, J. Conde</span> – 
+        <a href="https://www.sciencedirect.com/science/article/pii/S0168365924000713" class="journal">Biomimetic bright optotheranostics for metastasis monitoring and multimodal image-guided breast cancer therapeutics</a> 
+  </div>
+    <div class="publication">
+        <span class="authors">Y. Jiao, W.C. Huang, K. Chiem, Y. Song, J. Sun, S.K. Chothe, S. Zhou, Y. Luo, M.T. Mabrouk, J. Ortega, S.V. Kuchipudi, L. Martinez-Sobrido, J.F. Lovell</span> – 
+        <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/smll.202304534" class="journal">SARS-CoV-2 Protein Nanoparticle Vaccines Formed In Situ From Lyophilized Lipids</a> 
+                    
         <!-- 2021 -->
     <div class="pub-year">
         <h2>2021</h2>
